; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xl/extr_xlphy.c_xlphy_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xl/extr_xlphy.c_xlphy_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_softc = type { i32 }

@MII_BMCR = common dso_local global i32 0, align 4
@BMCR_S100 = common dso_local global i32 0, align 4
@BMCR_AUTOEN = common dso_local global i32 0, align 4
@BMCR_FDX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mii_softc*)* @xlphy_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xlphy_reset(%struct.mii_softc* %0) #0 {
  %2 = alloca %struct.mii_softc*, align 8
  store %struct.mii_softc* %0, %struct.mii_softc** %2, align 8
  %3 = load %struct.mii_softc*, %struct.mii_softc** %2, align 8
  %4 = call i32 @mii_phy_reset(%struct.mii_softc* %3)
  %5 = load %struct.mii_softc*, %struct.mii_softc** %2, align 8
  %6 = load i32, i32* @MII_BMCR, align 4
  %7 = load i32, i32* @BMCR_S100, align 4
  %8 = load i32, i32* @BMCR_AUTOEN, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @BMCR_FDX, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @PHY_WRITE(%struct.mii_softc* %5, i32 %6, i32 %11)
  ret void
}

declare dso_local i32 @mii_phy_reset(%struct.mii_softc*) #1

declare dso_local i32 @PHY_WRITE(%struct.mii_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
